--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -37,11 +37,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleTerminal.cs" />
-    <Compile Include="PacketSniffer.cs" />
+    <Compile Include="UI\ConsoleTerminal.cs" />
+    <Compile Include="Core\Utilities\PacketSniffer.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Ex02.ConsoleUtils">
+      <HintPath>..\..\..\..\Users\itaym\Downloads\Ex02.ConsoleUtils.dll</HintPath>
+    </Reference>
     <Reference Include="PacketDotNet, Version=1.4.8.0, Culture=neutral, PublicKeyToken=451414c7667b2a58, processorArchitecture=MSIL">
       <HintPath>..\packages\PacketDotNet.1.4.8-pre20\lib\net472\PacketDotNet.dll</HintPath>
     </Reference>
@@ -65,6 +68,18 @@
     <Reference Include="System.Text.Encoding.CodePages, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.Encoding.CodePages.6.0.0\lib\net461\System.Text.Encoding.CodePages.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="AI\DataPreprocessing\" />
+    <Folder Include="AI\MachineLearning\" />
+    <Folder Include="Core\Database\" />
+    <Folder Include="Core\Detection\" />
+    <Folder Include="Core\Models\" />
+    <Folder Include="Core\Scanners\" />
+    <Folder Include="Monitoring\" />
+    <Folder Include="Performance\" />
+    <Folder Include="Service\" />
+    <Folder Include="ThreatIntelligence\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
