--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -37,6 +37,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Database\SamplesSignitures\Architecture.cs" />
     <Compile Include="UI\ConsoleTerminal.cs" />
     <Compile Include="Core\Utilities\PacketSniffer.cs" />
     <Compile Include="Program.cs" />
@@ -72,7 +73,6 @@
   <ItemGroup>
     <Folder Include="AI\DataPreprocessing\" />
     <Folder Include="AI\MachineLearning\" />
-    <Folder Include="Core\Database\" />
     <Folder Include="Core\Detection\" />
     <Folder Include="Core\Models\" />
     <Folder Include="Core\Scanners\" />
