--- a/BasicSniffer/PacketsSniffer/packages.config
+++ b/BasicSniffer/PacketsSniffer/packages.config
@@ -3,6 +3,7 @@
   <package id="PacketDotNet" version="1.4.8-pre20" targetFramework="net48" />
   <package id="SharpPcap" version="6.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Data.SqlClient" version="4.9.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
