--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -37,7 +37,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Database\SamplesSignitures\MallwareSignituresDatabaseMaintain.cs" />
     <Compile Include="Core\Database\SamplesSignitures\SignituresDataClasses.cs" />
+    <Compile Include="UI\MainConsole.cs" />
     <None Include="Core\Database\sql\Dockerfile" />
     <Compile Include="Core\Detection\FileDetection.cs" />
     <Compile Include="UI\ConsoleTerminal.cs" />
