--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -39,11 +39,13 @@
   <ItemGroup>
     <Compile Include="Core\Database\SamplesSignitures\MallwareSignituresDatabaseMaintain.cs" />
     <Compile Include="Core\Database\SamplesSignitures\SignituresDataClasses.cs" />
+    <Compile Include="Monitoring\SuspiciousPacketsAnalayzer.cs" />
+    <Compile Include="UI\BackgroundMonitoringConsole.cs" />
     <Compile Include="UI\MainConsole.cs" />
     <None Include="Core\Database\sql\Dockerfile" />
     <Compile Include="Core\Detection\FileDetection.cs" />
     <Compile Include="UI\ConsoleTerminal.cs" />
-    <Compile Include="Core\Utilities\PacketSniffer.cs" />
+    <Compile Include="Monitoring\PacketSniffer.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -122,7 +124,7 @@
     <Folder Include="AI\MachineLearning\" />
     <Folder Include="Core\Models\" />
     <Folder Include="Core\Scanners\" />
-    <Folder Include="Monitoring\" />
+    <Folder Include="Core\Utilities\" />
     <Folder Include="Performance\" />
     <Folder Include="Service\" />
     <Folder Include="ThreatIntelligence\" />
