DNS packets check functionality --FINISH--

--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -39,9 +39,10 @@
   <ItemGroup>
     <Compile Include="Core\Database\SamplesSignitures\MallwareSignituresDatabaseMaintain.cs" />
     <Compile Include="Core\Database\SamplesSignitures\SignituresDataClasses.cs" />
-    <Compile Include="Monitoring\DnsPacket.cs" />
+    <Compile Include="Monitoring\DNS\DnsPacket.cs" />
+    <Compile Include="Monitoring\HttpHttps.cs" />
     <Compile Include="Monitoring\PacketExtensions.cs" />
-    <Compile Include="Monitoring\SuspiciousPacketsAnalayzer.cs" />
+    <Compile Include="Monitoring\DNS\DnsPacketsAnalayzer.cs" />
     <Compile Include="UI\BackgroundMonitoringConsole.cs" />
     <Compile Include="UI\MainConsole.cs" />
     <None Include="Core\Database\sql\Dockerfile" />
@@ -53,6 +54,9 @@
   <ItemGroup>
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
       <HintPath>..\packages\BouncyCastle.Cryptography.2.3.1\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
+    </Reference>
+    <Reference Include="DnsClient, Version=1.8.0.0, Culture=neutral, PublicKeyToken=4574bb5573c51424, processorArchitecture=MSIL">
+      <HintPath>..\packages\DnsClient.1.8.0\lib\net472\DnsClient.dll</HintPath>
     </Reference>
     <Reference Include="Ex02.ConsoleUtils">
       <HintPath>..\..\..\..\Users\itaym\Downloads\Ex02.ConsoleUtils.dll</HintPath>
