--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="app.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -44,6 +45,7 @@
     <Compile Include="Monitoring\PacketExtensions.cs" />
     <Compile Include="Monitoring\DNS\DnsPacketsAnalayzer.cs" />
     <Compile Include="Monitoring\PacketsHandle\ICMP.cs" />
+    <Compile Include="Monitoring\ProcessesMonitoring.cs" />
     <Compile Include="UI\BackgroundMonitoringConsole.cs" />
     <Compile Include="UI\MainConsole.cs" />
     <None Include="Core\Database\sql\Dockerfile" />
