--- a/BasicSniffer/PacketsSniffer/Antivirus.csproj
+++ b/BasicSniffer/PacketsSniffer/Antivirus.csproj
@@ -38,6 +38,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Database\SamplesSignitures\Hashes.cs" />
     <Compile Include="Core\Database\SamplesSignitures\MallwareSignituresDatabaseMaintain.cs" />
     <Compile Include="Core\Database\SamplesSignitures\SignituresDataClasses.cs" />
     <Compile Include="Monitoring\DNS\DnsPacket.cs" />
