--- a/BasicSniffer/BasicSniffer.csproj
+++ b/BasicSniffer/BasicSniffer.csproj
@@ -8,4 +8,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>	
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mono.Cecil" Version="0.11.6" />
+  </ItemGroup>
+
 </Project>
