--- a/BasicSniffer/PacketsSniffer/packages.config
+++ b/BasicSniffer/PacketsSniffer/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net48" />
   <package id="MongoDB.Bson" version="3.1.0" targetFramework="net48" />
+  <package id="Mono.Cecil" version="0.11.6" targetFramework="net48" />
   <package id="MySql.Data" version="9.1.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="PacketDotNet" version="1.4.8-pre20" targetFramework="net48" />
