--- a/BasicSniffer/PacketsSniffer/packages.config
+++ b/BasicSniffer/PacketsSniffer/packages.config
@@ -18,6 +18,7 @@
   <package id="Quartz" version="3.13.1" targetFramework="net48" />
   <package id="SharpPcap" version="6.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="9.0.3" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.9.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
@@ -25,6 +26,7 @@
   <package id="System.Memory" version="4.6.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
   <package id="System.Reactive" version="6.0.1" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="9.0.3" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Pkcs" version="8.0.1" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net48" />
